@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[48] --> Pet: Return to player in passive reactstate if commandstate is follow.
 [47] --> Add Scripts/Ruby Sanctum: Halion (thx Warpten).
 [46] --> Updated script Transmogrification and fix crash gargoyle.
 [45] --> [Argent Tournament] Fix Npc Lake Frog.
